# mu-scala

./: .git-blame-ignore-revs  .gitignore  .mergify.yml  .sbtopts  .scala-steward.conf  .scalafmt.conf  .travis.yml  AUTHORS.md  CHANGELOG.md  CHANGELOG_old.md  CONTRIBUTING.md  COPYING  LICENSE  LICENSE.md  NOTICE.md  README.md  _config.yml  annotations.html  build.sbt  core-concepts.html  decimal-migration-guide.html  generate-sources-from-avro.html  generate-sources-from-idl.html  generate-sources-from-openapi.html  generate-sources-from-proto.html  getting-started.html  guides.html  idl-generation.html  index.html  metrics-reporting.html  patterns.html  reference.html  references.html  schema-evolution.html  secret_key.asc.enc  secring.gpg.enc  ssl-tls.html  streaming.html  tutorials.html  version.sbt
.github/: actions.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  aggregate  run-benchmark  run-benchmarks-all
benchmarks/src/main/scala/: AvroBenchmark.scala  AvroWithSchemaBenchmark.scala  ProtoBenchmark.scala  Utils.scala
common/src/main/scala/: common.scala  protocol.scala
css/: light-style.css  mu-styles.css  palette.css  style.css
demo/gateway/server/: entry.go
demo/src/main/proto/: greeting.proto
demo/src/main/scala/: GreetingClient.scala  GreetingClientApp.scala  GreetingServerApp.scala  GreetingService.scala  package.scala
docs/rpc/: annotations.html  core-concepts.html  decimal-migration-guide.html  idl-generation.html  metrics-reporting.html  patterns.html  references.html  ssl-tls.html  streaming.html
docs/src/main/docs/: annotations.md  core-concepts.md  decimal-migration-guide.md  getting-started.md  index.md  metrics-reporting.md  patterns.md  references.md  ssl-tls.md  streaming.md
docs/src/main/tut/: README.md  annotations.md  core-concepts.md  decimal-migration-guide.md  generate-sources-from-idl.md  idl-generation.md  implementations.md  index.md  metrics-reporting.md  patterns.md  quickstart.md  references.md  ssl-tls.md  (+1 more)
guides/: accessing-metadata.html  compression.html  custom-grpc-serialization.html  distributed-tracing.html  generate-sources-from-avro.html  generate-sources-from-compendium.html  generate-sources-from-idl.html  generate-sources-from-proto.html  grpc-streaming.html  metrics-reporting.html  ssl-tls.html
highlight/: LICENSE  highlight.pack.js
jekyll-site/: _config.yml
jekyll-site/_data/: features.yml
jekyll-site/_includes/: _footer.html  _header.html  _main.html  _nav.html
jekyll-site/_layouts/: home.html
jekyll-site/_sass/base/: _base.scss
jekyll-site/_sass/components/: _buttons.scss  _features.scss  _footer.scss  _masthead.scss  _navigation.scss
jekyll-site/_sass/utils/: _variables.scss
jekyll-site/css/: styles.scss
js/: docs.js  main.js  search.js  version-selector.js
lunr/: LICENSE  lunr.js
modules/examples/health-check/: README.md
modules/examples/health-check-fs2/: README.md
modules/examples/health-check-monix/: README.md
modules/examples/routeguide/: README.md
modules/examples/todolist/: README.md
modules/haskell-integration-tests/: README.md  weather.proto
modules/haskell-integration-tests/mu-haskell-client-server/: .gitignore  Dockerfile  Dockerfile.warm_dot_stack  build.sh  mu-haskell-client-server.cabal  stack.yaml  weather.avdl  weather.proto
modules/haskell-integration-tests/mu-haskell-client-server/avro-client/: Main.hs
modules/haskell-integration-tests/mu-haskell-client-server/avro-server/: Main.hs
modules/haskell-integration-tests/mu-haskell-client-server/protobuf-client/: Main.hs
modules/haskell-integration-tests/mu-haskell-client-server/protobuf-server/: Main.hs
modules/haskell-integration-tests/mu-haskell-client-server/protocol/: AvroProtocol.hs  ProtobufProtocol.hs  Protocol.hs
modules/haskell-integration-tests/mu-haskell-protobuf/: Dockerfile  build.sh  mu-haskell-protobuf.cabal  stack.yaml
modules/haskell-integration-tests/mu-haskell-protobuf/client/: Main.hs
modules/haskell-integration-tests/mu-haskell-protobuf/protocol/: Protocol.hs
modules/haskell-integration-tests/mu-haskell-protobuf/server/: Main.hs  Schema.hs
project/: ProjectPlugin.scala  common.scala  plugins.sbt  scalapb.sbt
reference/: further-reading.html  modules-artifacts.html  schema-evolution.html  source-generation.html
reference/schema-evolution/: avro.html  proto.html
schema-evolution/: avro.html  proto.html
scripts/: gimme.sh  protobuf.sh
tutorials/: deployment.html  grpc-server-client.html  openapi-client.html  testing-rpc-service.html
tutorials/service-definition/: avro.html  protobuf.html
(+1234 files in other folders)
