name:                mu-haskell-client-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/higherkindness/mu-scala
author:              Chris Birchall
maintainer:          chris.birchall@47deg.com
copyright:           2020 Chris Birchall
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      protocol
  exposed-modules:     Protocol
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , text
                     , mu-schema >= 0.2.0
                     , mu-optics >= 0.2.0
                     , mu-rpc >= 0.2.0
                     , mu-protobuf >= 0.2.0
                     , mu-grpc-server >= 0.2.0
executable protobuf-server
  hs-source-dirs:      protobuf-server
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , text
                     , mu-schema >= 0.2.0
                     , mu-optics >= 0.2.0
                     , mu-rpc >= 0.2.0
                     , mu-protobuf >= 0.2.0
                     , mu-grpc-server >= 0.2.0
                     , mu-haskell-client-server

executable protobuf-client
  hs-source-dirs:      protobuf-client
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , text
                     , aeson >= 1.4.6.0
                     , bytestring >= 0.10.8.2
                     , mu-schema >= 0.2.0
                     , mu-optics >= 0.2.0
                     , mu-rpc >= 0.2.0
                     , mu-protobuf >= 0.2.0
                     , mu-grpc-client >= 0.2.0
                     , mu-haskell-client-server
