name:                mu-haskell-protobuf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mu-haskell-protobuf#readme
author:              Chris Birchall
maintainer:          chris.birchall@47deg.com
copyright:           2020 Chris Birchall
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable server
  hs-source-dirs:      server
  main-is:             Main.hs
  other-modules:       Schema
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , text
                     , mu-schema >= 0.2.0
                     , mu-optics >= 0.2.0
                     , mu-rpc >= 0.2.0
                     , mu-protobuf >= 0.2.0
                     , mu-grpc-server >= 0.2.0
